libsdl2 (2.0.4+dfsg1-1) UNRELEASED; urgency=medium

  * Team upload.
  * New upstream release (Closes: #788688, #798265, #788540)
    * Drop patches use-default-screen and
      fix_joystick_misc_axes.diff, applied upstream.
  * Add Files-Excluded keyword to copyright file, allowing to
    import a new release with uscan command. (Closes: #804662)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 03 Jan 2016 12:12:54 +0100

libsdl2 (2.0.2+dfsg1-8) unstable; urgency=medium

  * Change to improve build reproducibility: tar file permission modes.
    Thanks Reiner Herrmann. (Closes: #803578)
  * Build with sndio support (Closes: #799707)
  * Update d/copyright to adapt to minor changes in code and files moved
    around, and quell lintian (spelling-error-in-copyright,
    wildcard-matches-nothing-in-dep5-copyright and
    unused-file-paragraph-in-dep5-copyright)

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sun, 01 Nov 2015 00:55:03 +0000

libsdl2 (2.0.2+dfsg1-7) unstable; urgency=medium

  * Bump Policy Standards-Version to 3.9.6 (no changes needed)
  * Remove Barry deFreese from uploaders
  * Change for reproducible builds: use "--owner=0 --group=0" when
    creating the "examples" tar file (Closes: #777186).  Thanks Chris Lamb
    and rest of the Reproducible Builds team for the analysis and patch
    suggested.

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Mon, 27 Apr 2015 22:53:31 +0100

libsdl2 (2.0.2+dfsg1-6) unstable; urgency=medium

  * rules: disable activec for ppc64el build (Closes: #770670)

 -- Dominique Dumont <dod@debian.org>  Thu, 27 Nov 2014 18:52:50 +0100

libsdl2 (2.0.2+dfsg1-5) unstable; urgency=medium

  * patch to use default screen from DISPLAY (Closes: #754401)
  * fix short name of BSD-3-clause

 -- Dominique Dumont <dod@debian.org>  Sat, 18 Oct 2014 19:01:30 +0200

libsdl2 (2.0.2+dfsg1-4) unstable; urgency=medium

  [ Hector Oron ]
  * d/control: remove libts-dev build depends. (Closes: #751766)

  [ Felix Geyer ]