@@ -32,6 +32,7 @@ Build-Depends: debhelper (>= 9),
                libxv-dev,
                libxxf86vm-dev,
                pkg-config
+Build-Depends-Indep: doxygen
 Vcs-Git: git://anonscm.debian.org/pkg-sdl/packages/libsdl2.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-sdl/packages/libsdl2.git
 Homepage: http://www.libsdl.org/
@@ -86,6 +87,18 @@ Description: Simple DirectMedia Layer development files
  .
  This package contains the files needed to compile and link programs which
  use SDL.
+
+Package: libsdl2-doc
+Section: doc
+Architecture: all
+Depends: ${misc:Depends}
+Breaks: libsdl2-dev (<< 2.0.4+dfsg-1)
+Replaces: libsdl2-dev (<< 2.0.4+dfsg-1)
+Description: Reference manual for libsdl2
+ SDL is a library that allows programs portable low level access to a video
+ framebuffer, audio output, mouse, and keyboard.
+ .
+ This package contains the reference manual and examples.
 
 Package: libsdl2-dbg
 Architecture: any
