@@ -1,0 +1,1 @@
+output/html usr/share/doc/libsdl2-doc/
