@@ -2,10 +2,11 @@ libsdl2 (2.0.4+dfsg1-1) UNRELEASED; urgency=medium
 
   * Team upload.
   * New upstream release (Closes: #788688, #798265, #788540)
-    * Drop patches use-default-screen and
+    - Drop patches use-default-screen and
       fix_joystick_misc_axes.diff, applied upstream.
   * Add Files-Excluded keyword to copyright file, allowing to
     import a new release with uscan command. (Closes: #804662)
+  * Create new -doc package, and move examples into it (Closes: #739430).
 
  -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 03 Jan 2016 12:12:54 +0100
 
